fix(schwarz-theme): use correct theme for dark mode (#2320)
closes #2288

The schwarz-dark theme currently showed the wrong colors (onyx dark
mode) because we used `:where(.dark)` as selector instead of `.dark`
which was a leftover from a previous change.

I've run the Figma update variable workflow to update the theme
correctly.

--- a/packages/sit-onyx/src/styles/variables/themes/schwarz-dark.css
+++ b/packages/sit-onyx/src/styles/variables/themes/schwarz-dark.css
@@ -1,9 +1,9 @@
 /**
  * Do not edit directly.
  * This file contains the specific variables for the "schwarz-dark" theme.
- * Imported from Figma API on Wed, 04 Dec 2024 15:54:01 GMT
+ * Imported from Figma API on Thu, 12 Dec 2024 10:29:41 GMT
  */
-:where(.dark),
+.dark,
 .onyx-theme-schwarz-dark {
   --onyx-color-base-background-blank: var(--onyx-color-steel-1100);
   --onyx-color-base-background-tinted: var(--onyx-color-steel-1200);
